--- a/Ejercicio-04/CalculadoraCientifica.html
+++ b/Ejercicio-04/CalculadoraCientifica.html
@@ -35,12 +35,12 @@
         <input type="button" value = "M-" onClick = "calculadora.mMenos()"/>
         <input type="button" value = "MS" onClick = "calculadora.ms()"/>
 
-        <input type="button" value = "x&#178" onClick = "calculadora.elevado2()"/>
+        <input type="button" value = "x&#178;" onClick = "calculadora.elevado2()"/>
         <input type="button" value = "x^y" onClick = "calculadora.elevadoY()"/>
         <input id="sin" type="button" value = "sin" onClick = "calculadora.sin()"/>
         <input id="cos" type="button" value = "cos" onClick = "calculadora.cos()"/>
         <input id="tan" type="button" value = "tan" onClick = "calculadora.tan()"/>
-        <input type="button" value = "&#8730" onClick = "calculadora.raiz()"/>
+        <input type="button" value = "&Sqrt;" onClick = "calculadora.raiz()"/>
         <input type="button" value = "10^x" onClick = "calculadora.base10()"/>
         <input type="button" value = "log" onClick = "calculadora.log()"/>
         <input type="button" value = "Exp" onClick = "calculadora.exp()"/>
@@ -48,9 +48,9 @@
         <input type="button" value = "e" onClick = "calculadora.e()"/>
         <input type="button" value = "ce" onClick = "calculadora.cero()"/>
         <input type="button" value = "c" onClick = "calculadora.borrar()"/>
-        <input type="button" value = "&#8592" onClick = "calculadora.eliminar()"/>
-        <input type="button" value = "&divide" onClick = "calculadora.dividar()"/>
-        <input type="button" value = "&#960" onClick = "calculadora.pi()"/>
+        <input type="button" value = "&#8592;" onClick = "calculadora.eliminar()"/>
+        <input type="button" value = "&#247;" onClick = "calculadora.division()"/>
+        <input type="button" value = "&#960;" onClick = "calculadora.pi()"/>
         <input type="button" value = "7" onClick = "calculadora.digitos(7)"/>
         <input type="button" value = "8" onClick = "calculadora.digitos(8)"/>
         <input type="button" value = "9" onClick = "calculadora.digitos(9)"/>
@@ -60,7 +60,7 @@
         <input type="button" value = "5" onClick = "calculadora.digitos(5)"/>
         <input type="button" value = "6" onClick = "calculadora.digitos(6)"/>
         <input type="button" value = "-" onClick = "calculadora.resta()"/>
-        <input type="button" value = "&plusmn" onClick = "calculadora.cambiarSigno()"/>
+        <input type="button" value = "&plusmn;" onClick = "calculadora.cambiarSigno()"/>
         <input type="button" value = "1" onClick = "calculadora.digitos(1)"/>
         <input type="button" value = "2" onClick = "calculadora.digitos(2)"/>
         <input type="button" value = "3" onClick = "calculadora.digitos(3)"/>
