--- a/Ejercicio-04/CalculadoraCientifica.html
+++ b/Ejercicio-04/CalculadoraCientifica.html
@@ -69,7 +69,9 @@
         <input type="button" value = ")" onClick = "calculadora.parentesisDcho()"/>
         <input type="button" value = "0" onClick = "calculadora.digitos(0)"/>
         <input type="button" value = "," onClick = "calculadora.punto()"/>
+        <input type="submit" value="Enviar"/>
         <input type="button" value = "=" onClick = "calculadora.igual()"/>
+        
     </form>
 
 </body>
