--- a/Ejercicio-04/CalculadoraCientifica.html
+++ b/Ejercicio-04/CalculadoraCientifica.html
@@ -74,5 +74,10 @@
         
     </form>
 
+    <label for="modo">para taw</label>
+    <label for="sin">para taw</label>
+    <label for="cos">para taw</label>
+    <label for="tan">para taw</label>
+
 </body>
 </html>
