--- a/Ejercicio-03/CalculadoraBasica.html
+++ b/Ejercicio-03/CalculadoraBasica.html
@@ -44,6 +44,8 @@
         <input type="button" value = "." onClick = "calculadora.punto()"/>
         <input type="button" value = "c" onClick = "calculadora.borrar()"/>
         <input type="button" value = "=" onClick = "calculadora.igual()"/>
+
+        <input type="submit" value="Enviar"/>
     </form>
 
 </body>
