--- a/Ejercicio-06/CalculadoraEnergenica.html
+++ b/Ejercicio-06/CalculadoraEnergenica.html
@@ -19,6 +19,7 @@
         <h1>Calculadora RPN</h1>
     </header>
 
+    <label for="operacion">UO277348</label>
    
     <form>
         <textarea id="operacion"></textarea>
@@ -60,7 +61,7 @@
         <input type="button" value = "0" onClick = "calculadora.digitos(0)"/>
         <input type="button" value = "," onClick = "calculadora.punto()"/>
         
-        
+        <input type="submit" value="Enviar"/>
     </form>
 
 </body>
