--- a/Ejercicio-12/Ejercicio12.html
+++ b/Ejercicio-12/Ejercicio12.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <p><input type="file" id="archivoTexto" onchange="reader.leerArchivoTexto(this.files);"></p>
+    <input type="file" id="archivoTexto" onchange="reader.leerArchivoTexto(this.files);">
     <section id="datos">
-        <h1> DATOS DEL ARCHIVO </h1>
+        <h2> DATOS DEL ARCHIVO </h2>
     </section>
     <pre id="areaTexto"></pre>
 </body>
