--- a/Ejercicio-12/Ejercicio12.html
+++ b/Ejercicio-12/Ejercicio12.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <h1> Lee ficheros </h1>
+    <label for="archivoTexto">Introduce el texto a leer</label>
     <input type="file" id="archivoTexto" onchange="reader.leerArchivoTexto(this.files);">
     <section id="datos">
         <h2> DATOS DEL ARCHIVO </h2>
