--- a/Ejercicio-12/Ejercicio12.html
+++ b/Ejercicio-12/Ejercicio12.html
@@ -18,7 +18,7 @@
     <label for="archivoTexto">Introduce el texto a leer</label>
     <input type="file" id="archivoTexto" onchange="reader.leerArchivoTexto(this.files);">
     <section id="datos">
-        <h2> DATOS DEL ARCHIVO </h2>
+        <h2>Aqui estarán los datos del archivo</h2>
     </section>
     <pre id="areaTexto"></pre>
 </body>
